@@ -532,7 +532,6 @@ public class TestPerfTasksLogic extends BenchmarkTestCase {
         "{ [ AddDoc]: 4} : * ",
         "ResetInputs ",
         "{ [ AddDoc]: 4} : * ",
-        "WaitForMerges",
         "CloseIndex",
     };
     
@@ -568,7 +567,6 @@ public class TestPerfTasksLogic extends BenchmarkTestCase {
         "  ResetSystemErase",
         "  CreateIndex",
         "  { \"AddDocs\"  AddDoc > : * ",
-        "  WaitForMerges",
         "  CloseIndex",
         "} : 2",
     };
